# udv_llm_fastapi

./: Dockerfile.api  Dockerfile.fast_api  check_doc_table.py  main.py  pyproject.toml  run.sh  script.py
config/: config.py  logs.py
migrations/: env.py
migrations/versions/: 0ff9c2703fe8_add_second_doc_to_contest.py  27c0add16c87_change_points_to_numeric.py  36eb069e19da_add_in_contest_to_doc.py  452969261a3e_add_chunk_size_embedding_model_to_doc.py  584d86fdd58e_answer_question_system_test_system.py  703491095928_add_admin_requests.py  7274eeb44a12_add_embedding_tokens.py  82b44b92271e_remove_path_from_doc_and_add_viewed_to_.py  870dc195798d_for_semantic_cache.py  8debcf9c3aa9_add_cheat_tests_and_feedbacks_counting.py  a4e3cbde5f92_.py  adb904199354_remove_company_representative_add_.py  bdfe05734ce8_add_statistics_and_feedback.py  c171c02ed299_contest.py  d6c0776ffed5_fix.py  ec5541b43455_add_user_id_to_request_statistic.py
src/admin_panel/: models.py  router.py  schemas.py  utils.py
src/auth/: auth_config.py  manager.py  models.py  schemas.py  send_email.py
src/auth/routers/: forgot_pass_router.py
src/docs/: models.py  router.py  schemas.py  utils.py
src/llm_service/: contest.py  models.py  router.py  schemas.py  statistics.py  utils.py
src/services/: celery_service.py  email_service.py
