[tool.poetry]
name = "udv-llm-fastapi"
version = "0.1.0"
description = ""
authors = ["Kostya Pershin <kostya.pershin.18@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
bcrypt = "4.1.2"
certifi = "2024.2.2"
cffi = "1.16.0"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "42.0.5"
dnspython = "2.6.1"
email-validator = "2.1.0.post1"
fastapi = "0.110.0"
fastapi-users = "12.1.3"
fastapi-users-db-sqlalchemy = "6.0.1"
greenlet = "3.0.3"
gunicorn = "21.2.0"
h11 = "0.14.0"
httpcore = "1.0.4"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.6"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
makefun = "1.15.2"
mako = "1.3.2"
markupsafe = "2.1.5"
orjson = "3.9.15"
packaging = "24.0"
passlib = "1.7.4"
pycparser = "2.21"
pydantic = "2.6.2"
pydantic-extra-types = "2.5.0"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.7"
pyyaml = "6.0.1"
sniffio = "1.3.0"
sqlalchemy = "2.0.27"
starlette = "0.36.3"
typing-extensions = "4.9.0"
ujson = "5.9.0"
uvicorn = "0.27.1"
watchfiles = "0.21.0"
websockets = "12.0"
pytz = "^2024.1"
celery = "^5.4.0"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"